core/src/ast/snapshots/span_testing/diplomat_core__ast__logging__tests__flush@self_type.rs_ugly.snap
---
source: core/src/ast/logging.rs
expression: self.buf
---
Diplomat error: Self type not found
In src/ast/snapshots/span_testing/self_type.rs:3:10:
...impl [usize; 1] {...
        ^^^^^^^^^^
Expected Path type
